manifest/crmdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-content
  namespace: crm-content
  labels:
    app: crm-content
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm-content
  template:
    metadata:
      labels:
        app: crm-content
    spec:
      containers:
      - name: crm-content
        image: vapprtech/crm:latest
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 1337
