manifest/crmservice.yml
apiVersion: v1
kind: Service
metadata:
  name: crm-content
  namespace: crm-content
  labels:
    app: crm-content
spec:
  ports:
  - name: https
    port: 1337
    targetPort: 1337
  selector:
    app: crm-content
