manifest/crmingress.yaml
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: crm-content
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
   - host: dev-crm.vapprtech.com
   - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
               name: crm-content
               port:
                number: 80
